crates/playwright-rs-macros/tests/ui/whitespace_only.stderr
error: selector is empty or whitespace-only
 --> tests/ui/whitespace_only.rs:4:22
  |
4 |     let _ = locator!("   ");
  |                      ^^^^^
